# pyapp-poetry-demo

./: Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
app.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  entry_points.txt  requires.txt
pip-wheel-metadata/app.dist-info/: METADATA
